--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "codium",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Codium - A Medium-like blog application for coding related topics.",
+  "author": "reapz",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
